
[Test/cassette_TestCommand_LockfileWithExplicitParseAs/TestCommand_LockfileWithExplicitParseAs/absolute_paths_are_automatically_escaped_on_windows - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_LockfileWithExplicitParseAs/TestCommand_LockfileWithExplicitParseAs/absolute_paths_work_with_explicit_escaping - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_LockfileWithExplicitParseAs/TestCommand_LockfileWithExplicitParseAs/empty_is_default - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_LockfileWithExplicitParseAs/TestCommand_LockfileWithExplicitParseAs/multiple,_+_output_order_is_deterministic - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      },
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      },
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "has-flag",
          "ecosystem": "npm"
        },
        "version": "4.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "league/flysystem",
          "ecosystem": "Packagist"
        },
        "version": "1.0.8"
      },
      "vulns": [
        {
          "id": "GHSA-9f46-5r25-5wfm",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "stdlib",
          "ecosystem": "Go"
        },
        "version": "1.99.9"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "toolchain",
          "ecosystem": "Go"
        },
        "version": "1.99.9"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "wrappy",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_LockfileWithExplicitParseAs/TestCommand_LockfileWithExplicitParseAs/multiple,_+_output_order_is_deterministic_2 - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      },
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      },
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "has-flag",
          "ecosystem": "npm"
        },
        "version": "4.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "league/flysystem",
          "ecosystem": "Packagist"
        },
        "version": "1.0.8"
      },
      "vulns": [
        {
          "id": "GHSA-9f46-5r25-5wfm",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "stdlib",
          "ecosystem": "Go"
        },
        "version": "1.99.9"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "toolchain",
          "ecosystem": "Go"
        },
        "version": "1.99.9"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "wrappy",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_LockfileWithExplicitParseAs/TestCommand_LockfileWithExplicitParseAs/one_lockfile_with_local_path - 1]
{}

---

[Test/cassette_TestCommand_LockfileWithExplicitParseAs/TestCommand_LockfileWithExplicitParseAs/when_an_explicit_parse-as_is_given,_it's_applied_to_that_file - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      },
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "has-flag",
          "ecosystem": "npm"
        },
        "version": "4.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "league/flysystem",
          "ecosystem": "Packagist"
        },
        "version": "1.0.8"
      },
      "vulns": [
        {
          "id": "GHSA-9f46-5r25-5wfm",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "stdlib",
          "ecosystem": "Go"
        },
        "version": "1.99.9"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "toolchain",
          "ecosystem": "Go"
        },
        "version": "1.99.9"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "wrappy",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    }
  ]
}

---
